--- a/app/src/main/res/layout/item_gridview.xml
+++ b/app/src/main/res/layout/item_gridview.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imgThing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -17,61 +17,62 @@
         app:srcCompat="@drawable/dauchuyendoi" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvName"
         android:layout_width="157dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
         android:text="Cáp chuyển từ Cổng  USB sang PS2..."
         android:textColor="#0E0E0E"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintEnd_toEndOf="@+id/imgThing"
+        app:layout_constraintStart_toStartOf="@+id/imgThing"
+        app:layout_constraintTop_toBottomOf="@+id/imgThing" />
 
     <RatingBar
-        android:id="@+id/ratingBar3"
+        android:id="@+id/rtBar"
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:rating="3"
         android:theme="@style/RatingBar"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="@+id/tvName"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintStart_toStartOf="@+id/tvName"
+        app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvnewPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="69.000"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/ratingBar3"
+        app:layout_constraintEnd_toEndOf="@+id/rtBar"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/ratingBar3"
-        app:layout_constraintTop_toBottomOf="@+id/ratingBar3" />
+        app:layout_constraintStart_toStartOf="@+id/rtBar"
+        app:layout_constraintTop_toBottomOf="@+id/rtBar" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvreducePercent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:text="-39%"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/ratingBar3" />
+        app:layout_constraintEnd_toEndOf="@+id/tvName"
+        app:layout_constraintHorizontal_bias="0.433"
+        app:layout_constraintStart_toEndOf="@+id/tvnewPrice"
+        app:layout_constraintTop_toBottomOf="@+id/rtBar" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tvrpeopleRate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="(15)"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintStart_toEndOf="@+id/ratingBar3"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintEnd_toEndOf="@+id/tvName"
+        app:layout_constraintStart_toEndOf="@+id/rtBar"
+        app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
